Bug 1069658 - The slide-down titlebar in fullscreen mode is transparent on Yosemite. r=mstange